apps/flight-plan-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-plan-manager
spec:
  selector:
    matchLabels:
      app: flight-plan-manager
  template:
    metadata:
      labels:
        app: flight-plan-manager
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: flight-plan-manager
        image: ghcr.io/indy-center/flight-plan-manager:latest
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m 
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
