apps/flight-plan-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-plan-manager
spec:
  selector:
    app: flight-plan-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
