apps/flight-plan-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-plan-manager
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - flight-plan-manager.zid-internal.com
      secretName: flight-plan-manager-tls
  rules:
    - host: flight-plan-manager.zid-internal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flight-plan-manager
                port:
                  number: 80
